--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -7,7 +8,7 @@ body {
   header {
     background-color: #f2f2f2;
     padding: 20px;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     right: 0;
     left: 0;
@@ -65,7 +66,7 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     margin: auto;
-    margin-top: 150px
+    margin-top: 0px
 
   }
   
@@ -164,6 +165,11 @@ h3{
 
 .testimonial-item p {
   font-size: 16px;
+}
+
+
+.thebody{
+
 }
 
 footer{
